--- a/GreedySnakeGame/GreedySnakeGame/GreedySnakeGame.vcxproj.filters
+++ b/GreedySnakeGame/GreedySnakeGame/GreedySnakeGame.vcxproj.filters
@@ -23,6 +23,10 @@
     <ClCompile Include="..\src\Snake.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Point.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Food.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Map.h">
@@ -32,6 +36,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Define.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Point.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Food.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
