--- a/GreedySnakeGame/GreedySnakeGame/GreedySnakeGame.vcxproj
+++ b/GreedySnakeGame/GreedySnakeGame/GreedySnakeGame.vcxproj
@@ -19,18 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Food.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\Map.cpp" />
     <ClCompile Include="..\src\Point.cpp" />
     <ClCompile Include="..\src\Snake.cpp" />
-    <ClCompile Include="Food.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Define.h" />
+    <ClInclude Include="..\src\Food.h" />
     <ClInclude Include="..\src\Map.h" />
     <ClInclude Include="..\src\Point.h" />
     <ClInclude Include="..\src\Snake.h" />
-    <ClInclude Include="Food.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
